--- a/lecture1/lecture1.html
+++ b/lecture1/lecture1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
     <title>Lecture 1: Introduction</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="author" content="İlhan Güner | University of Kent" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies.css" rel="stylesheet" />
@@ -94,7 +94,7 @@ https://www.kent.ac.uk/learning/resources/studyguides/planningandwritingessays.p
 
 - The lists of essay topics will be available in Moodle
 
-- One essay to be chosen out of three topics in Week 19 
+- One essay to be chosen out of four topics in Week 19 
 
  - List of topics is available immediately
 
@@ -114,14 +114,16 @@ https://www.kent.ac.uk/learning/resources/studyguides/planningandwritingessays.p
 &lt;br&gt;
 
 
-- Read the core text: 
+- Read the core text: [Core The Economy](https://core-econ.org/the-economy/?lang=en) 
 
  - In addition to core text, you may also use additional recommended text books
 
 - Prepare for seminars – Use them to test your understanding of the lecture
 
 
-- Read a good daily newspaper  - Financial Times &amp; Economist
+- Read a good daily newspaper  - The New York Times, Financial Times, Economist
+
+ - The library provides online [access](https://www.kent.ac.uk/library/resources/news/index.html) to NYT and FT.
 
 ---
 
@@ -199,7 +201,7 @@ We will learn
 
 - how wages and unemployment rate are related
 
-- how wage setting and price setting process determines real wages and the level of unemployment in the economy
+- how wage setting and price setting processes jointy determine real wages and the level of unemployment in the economy
 
 
 ---
@@ -216,20 +218,23 @@ We will learn
 &lt;img src="./lecture1_files/figure-html/real_wages.svg" width="70%"/&gt;
 &lt;/center&gt;
 
+Wait! How come unemployment rate is at record-low levels but real wages remain below pre-crisis level?
+
 ---
 ### Productivity in the UK
 
 &lt;center&gt;
-&lt;img src="./lecture1_files/figure-html/UK_productivity.svg" width="70%"/&gt;
+&lt;img src="./lecture1_files/figure-html/uk_productivity.svg" width="70%"/&gt;
 &lt;/center&gt;
 
 ---
 ### Lost Income
 
 &lt;center&gt;
-&lt;img src="./lecture1_files/figure-html/UK_productivity-trend.svg" width="70%"/&gt;
+&lt;img src="./lecture1_files/figure-html/uk_productivity-trend.svg" width="70%"/&gt;
 &lt;/center&gt;
 
+Had the productivity growth followed the trend, each person would have earned about 11% more now.
 ---
 ### The credit market
 
@@ -237,7 +242,7 @@ We will learn
 
 - role of financial institutions on funneling consumer savings into investment
 
-- principal agent problem in the borowing-lending relationship
+- principal agent problem in the borrowing-lending relationship
 
 - the process of money creation
 
@@ -245,13 +250,25 @@ We will learn
 
 - determination of the interest rate charged by the banks
 
+ - largely determined by the policy rate set by the central banks
+
 ---
 ### Deposit rate
 &lt;center&gt;
 &lt;iframe src="https://fred.stlouisfed.org/graph/graph-landing.php?g=pSS5&amp;width=950&amp;height=475" scrolling="no" frameborder="0"style="overflow:hidden; width:950px; height:525px;" allowTransparency="true" loading="lazy"&gt;&lt;/iframe&gt;
 &lt;/center&gt;
 
+
+
 ---
+### Monetary Policy
+
+&lt;center&gt;
+&lt;iframe src="https://fred.stlouisfed.org/graph/graph-landing.php?g=oHnd&amp;width=950&amp;height=475" scrolling="no" frameborder="0"style="overflow:hidden; width:950px; height:525px;" allowTransparency="true" loading="lazy"&gt;&lt;/iframe&gt;
+&lt;/center&gt;
+
+---
+
 ### Economic fluctuations
 
 
@@ -267,7 +284,7 @@ We will learn
 &lt;/center&gt;
 
 ---
-## Business Cycles
+### Business Cycles
 
 .pull-left[
 #### Trend
@@ -285,21 +302,17 @@ We will learn
 
 ]
 
----
-## Peak and trough of a business cycle
-&lt;center&gt;
-&lt;img src="./lecture1_files/figure-html/UK-gdp-trend_recession.svg" width="70%"/&gt;
-&lt;/center&gt;
-
 
 ---
-## Fiscal Policy
+### Fiscal Policy
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/revenue-expenditure-scatter.svg" width="60%"/&gt;
 &lt;/center&gt;
 
+
+
 ---
-## Philips Curve
+### Philips Curve
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/philips_curve_1960s.svg" width="50%"/&gt;
@@ -307,7 +320,7 @@ We will learn
 
 ---
 
-## Philips Curve
+### Philips Curve
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/philips_curve_1970s.svg" width="50%"/&gt;
@@ -316,41 +329,41 @@ We will learn
 
 ---
 
-## Philips Curve
+### Philips Curve
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/philips_curve_1980s.svg" width="50%"/&gt;
 &lt;/center&gt;
 
 ---
-## Philips Curve
+### Philips Curve
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/philips_curve_1990s.svg" width="50%"/&gt;
 &lt;/center&gt;
 
 ---
-## Philips Curve
+### Philips Curve
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/philips_curve_2000s.svg" width="50%"/&gt;
 &lt;/center&gt;
 
 ---
-## Philips Curve
+### Philips Curve
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/philips_curve_2010s.svg" width="50%"/&gt;
 &lt;/center&gt;
 
 ---
-### Monetary Policy
-
-&lt;center&gt;
-&lt;iframe src="https://fred.stlouisfed.org/graph/graph-landing.php?g=oHnd&amp;width=950&amp;height=475" scrolling="no" frameborder="0"style="overflow:hidden; width:950px; height:525px;" allowTransparency="true" loading="lazy"&gt;&lt;/iframe&gt;
-&lt;/center&gt;
----
 ### Measuring income and living standards
+
+&lt;br&gt;
+
+&lt;br&gt;
+
+
 
 - Gross Domestic Product (GDP) = A measure of total income and output of the economy in a given period.
 Usually expressed in per-capita terms (as an average income).
@@ -363,7 +376,7 @@ Usually expressed in per-capita terms (as an average income).
 
 
 ---
-## GDP per capita over time
+### GDP per capita over time
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/gdp_per_capita_time.svg" width="80%"/&gt;
@@ -371,38 +384,53 @@ Usually expressed in per-capita terms (as an average income).
 
 ---
 
-## Timing of growth
+### Timing of growth
+
+
+&lt;br&gt;
+
 
 - Growth take-off occurred at different points in time for different countries:
+
  - Britain was the first country to experience sustained economic growth. It began around 1650.
+ 
  - In Japan, it occurred around 1870.
+ 
  - The kink for China and India happened in the second half of the 20th century. 
 
 - In some economies, substantial improvements in people’s living standards did not occur until they gained independence from colonial rule or interference by European nations.
 
 
 ---
-## Britain: first to sustained economic growth
+### Britain: first to sustained economic growth
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/gdp_per_capita_1650_1850.svg" width="70%"/&gt;
 &lt;/center&gt;
 
 ---
-## Sustained growth in Japan occurred around 1870
+### Sustained growth in Japan occurred around 1870
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/gdp_per_capita_time_recent.svg" width="70%"/&gt;
 &lt;/center&gt;
 
 ---
-## The kink for China and India happened in the second half of the 20th century
+### The kink for China and India happened in the second half of the 20th century
 
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/gdp_per_capita_india_china_focus.svg" width="70%"/&gt;
 &lt;/center&gt;
 
+---
 
+### Income as a measure of well-being
+
+&lt;center&gt;
+&lt;iframe src="./lecture1_files/figure-html/gapminder.html" scrolling="no" style="width: 100%; height: 500px; border: 0px none;"&gt;&lt;/iframe&gt;
+&lt;/center&gt;
+
+Data: Gapminder
 ---
 ### International trade
 &lt;center&gt;
@@ -448,7 +476,15 @@ name: other
 &lt;center&gt;
 &lt;iframe src="https://ourworldindata.org/grapher/co2-concentration-long-term" style="width: 80%; height: 500px; border: 0px none;"&gt;&lt;/iframe&gt;
 &lt;/center&gt;
+
+---
+### Next lecture
+
+We will discuss
+
+- wage setting process of firms
     </textarea>
+<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
 "ratio": "16:9",
@@ -459,12 +495,59 @@ name: other
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
 });
-(function() {
-  var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+(function(d) {
+  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
   if (!r) return;
   s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
   d.head.appendChild(s);
-})();</script>
+})(document);
+
+(function(d) {
+  var el = d.getElementsByClassName("remark-slides-area");
+  if (!el) return;
+  var slide, slides = slideshow.getSlides(), els = el[0].children;
+  for (var i = 1; i < slides.length; i++) {
+    slide = slides[i];
+    if (slide.properties.continued === "true" || slide.properties.count === "false") {
+      els[i - 1].className += ' has-continuation';
+    }
+  }
+  var s = d.createElement("style");
+  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
+  d.head.appendChild(s);
+})(document);
+// delete the temporary CSS (for displaying all slides initially) when the user
+// starts to view slides
+(function() {
+  var deleted = false;
+  slideshow.on('beforeShowSlide', function(slide) {
+    if (deleted) return;
+    var sheets = document.styleSheets, node;
+    for (var i = 0; i < sheets.length; i++) {
+      node = sheets[i].ownerNode;
+      if (node.dataset["target"] !== "print-only") continue;
+      node.parentNode.removeChild(node);
+    }
+    deleted = true;
+  });
+})();
+// adds .remark-code-has-line-highlighted class to <pre> parent elements
+// of code chunks containing highlighted lines with class .remark-code-line-highlighted
+(function(d) {
+  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
+  const preParents = [];
+  const findPreParent = function(line, p = 0) {
+    if (p > 1) return null; // traverse up no further than grandparent
+    const el = line.parentElement;
+    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
+  };
+
+  for (let line of hlines) {
+    let pre = findPreParent(line);
+    if (pre && !preParents.includes(pre)) preParents.push(pre);
+  }
+  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
+})(document);</script>
 
 <script>
 (function() {
@@ -478,8 +561,8 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
 </script>
 
 <script>
-(function() {
-  var i, text, code, codes = document.getElementsByTagName('code');
+slideshow._releaseMath = function(el) {
+  var i, text, code, codes = el.getElementsByTagName('code');
   for (i = 0; i < codes.length;) {
     code = codes[i];
     if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
@@ -493,7 +576,8 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
     i++;
   }
-})();
+};
+slideshow._releaseMath(document);
 </script>
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
