--- a/lecture3/lecture3.html
+++ b/lecture3/lecture3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
-    <title>Lecture 2: Firms and Employees</title>
+    <title>Lecture 3: Price setting firms</title>
     <meta charset="utf-8" />
     <meta name="author" content="İlhan Güner | University of Kent" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
@@ -12,7 +12,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Lecture 2: Firms and Employees
+# Lecture 3: Price setting firms
 ## <html>
 <div style="float:left">
 
@@ -28,376 +28,14 @@ class: center, middle, inverse, title-slide
 
 
 
-## Firm decisions
-.pull-left[
 
-- What to produce
-
-- How to produce
-
-- Advertising budget
-
-- R&amp;D budget
-
-- **How to set wages** 
-
-- **How much to produce**
-
-- **At what price to sell**
-
-- ...
-]
-
-.pull-right[
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/new_yorker.jpg" width="120%"/&gt;
-&lt;/center&gt;
-Source: New Yorker
-
-]
----
-### Wage setting decision
+### Relevance of the previous lecture
 
 &lt;br&gt;
 
 &lt;br&gt;
 
-"Labor discipline model" is a theory that characterizes the wage setting process. 
-
----
-
-class: inverse, center, middle
-name: labor_discipline
-
-# Labor Discipline Model
-
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#EB811B' size=1px width=796px&gt;&lt;/html&gt;
-
-
----
-### Labor discipline model
-
-- Workers have employment rents
-
- - loosing a job is costly
- 
-- Workers exert more effort if the cost of loosing a job is higher
-
- - The higher the wage, the costlier to lose a job
- 
- - Exerting more effort is not desirable (disutility of work)
- 
-- Workers optimally decide on how much effort to put on
-
-- Firms have a trade-off:
-
- - Higher wages induce more effort from workers, leading to more production, increasing profitability
- 
- - Wage bill is a substantial portion of production costs, reducing profitability
- 
-- Firms optimally choose a wage rate to maximize profits 
-
----
-### Labor discipline model, cont'd
-
-&lt;br&gt;
-
-- A sequential game between an employer and an employee:
-
-1. Employer chooses a wage rate
-
-2. Employee chooses a level of work effort after observing the wage
-
-Notice that
-
-- Given wage, the employee takes into account the cost of losing a job if she does not exert enough effort
-
-- The employer anticates behavior of the employee and sets wage accordingly to maximize its profit
-
-
-- A Nash equilibrium is a set of stragies (wage offer by the firm, effort level by the employee) where no one is willing to deviate from.
-
-
-
----
-### Employment Rents
-
-
-.pull-left[
-[Read section 6.5 Determinants of the employment rent](https://core-econ.org/the-economy/book/text/06.html#65-determinants-of-the-employment-rent)
-
-
-- Cost of loosing a job
-
- - The difference between value of job and the next best option
-
-- Depends on  
- - wage, medical benefits, ... 
- - disutility of work (function of effort),
- - unemployment benefits (if exists)
- - duration of potential unemployment
- - stigma of unemployment,
- - other available employment opportunities  
-
-- Reservation wage = value of the next best option
-
-- Employment rent = wage - reservation wage - distutility of effort
-]
-
---
-
-.pull-right[
-
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide4.JPG" width="100%"/&gt;
-&lt;/center&gt;
-
-Employment rent = `\((12-6-2)\times 35 \times 44 = 6160\)` 
-
-]
-
-
----
-
-### Worker's best response
-
-.pull-left[
-- For a given wage offered, the optimal effort exerted by the workers
-
-- Say wage rate = $12
- - Why wouldn't a worker exert more effort than .5?
- - Why wouldn't a worker exert less effort than .5?
- 
-- Feasible set: 
-
- - Wage and effort pairs that a firm can get from its employees
-
-- Slope of the best response curve = MRT
- - MRT stands for marginal rate of transformation of wages into effort
-]
-.pull-right[
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide5.JPG" width="100%"/&gt;
-&lt;/center&gt;
-]
-
----
-
-### Shape of worker's best response
-
-.pull-left[
-- Effort at the reservation wage is 0
-
-- Effort is increasing in wage
-
-- Best response function is concave
-
- - Firms need to increase wage rate more to induce more effort from workers if the initial wage is higher
- 
-  - A result of increasing marginal disutility of effort
-
-- For more detail read [Leibniz: The worker’s best response function](https://www.core-econ.org/the-economy/book/text/leibniz-06-06-01.html)
-
-Questions:
-
-- What happens to the best response curve if 
-
- - unemployment duration increases,
- 
- - unemployment benefit decreases?
-]
-
-
-.pull-right[
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide5.JPG" width="100%"/&gt;
-&lt;/center&gt;
-]
-
----
-## Firm's best response
-
-- A firm's goal is to maximize profits
-
- - by maximizing production per employee
- 
- - by minimizing cost of production (wage bill included)
- 
-- To maximize production, offer higher wages
-
- - `\(\Uparrow\)` wages `\(\Rightarrow\)` `\(\Uparrow\)` effort `\(\Rightarrow\)` `\(\Uparrow\)` production
-
-- To minimize cost, offer lower wages
-
-- Trade-off between wages and effort
----
-## Isocost lines
-
-.pull-left[
-
-#### How to deal with the wage effort trade-off?
-
-- Minimize cost of effort (wage/effort)
-
-- Cost of effort is the same at all points on an isocost line
-
-
-]
-.pull-right[
-
-&lt;br&gt;
-
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/figure-06-05-b.jpg" width="140%"/&gt;
-&lt;/center&gt;
-]
-
----
-## Isocost lines
-
-.pull-left[
-
-#### How to deal with the wage effort trade-off?
-
-- Minimize cost of effort (wage/effort)
-
-- Cost of effort is the same at all points on an isocost line
-
- 
-- Cost of effort goes down as isocosts shift up
-
-]
-.pull-right[
-
-&lt;br&gt;
-
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/figure-06-05-c.jpg" width="140%"/&gt;
-&lt;/center&gt;
-]
-
----
-## Isocost lines
-
-.pull-left[
-
-#### How to deal with the wage effort trade-off?
-
-- Minimize cost of effort (wage/effort)
-
-- Cost of effort is the same at all points on an isocost line
-
-- Cost of effort goes down as the isocosts shifts up
-
-- Slope of isocost curve is MRS
-
- - MRS: marginal rate of substitution between effort and wage
- 
-
-]
-.pull-right[
-
-&lt;br&gt;
-
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/figure-06-05-e.jpg" width="140%"/&gt;
-&lt;/center&gt;
-]
-
----
-### Determination of wages
-
-.pull-left[
-- Profits are maximized at the steepest isocost line (the minimum feasible cost)
- 
- - Equilibrium wage and effort is point A, where MRS = MRT
- 
- - At point C, firms can increase profit by increasing wage offer (no equilibrium)
-
- - At any point on the left of A (where MRT=MRS), MRT &gt; MRS
- 
- - If MRT &gt; MRS, a marginal increases in wage would lead to increase in effort more than the amount required to keep firm profits constant. Hence, firms will increase wages until point A.
-
-
-
-- Efficiency wage: a wage rate greater than the reservation wage rate
- - What matters for profits is `\(e/w\)`, the efficiency per dollar of wage costs.
-]
-.pull-right[
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide7.JPG" width="100%"/&gt;
-&lt;/center&gt;
-]
-
----
-### Involuntary unemployment
-
-&lt;br&gt;
-
-&gt; "The state of being out of work, but preferring to have a job at the wages and working conditions that otherwise identical employed workers have."
-&gt; &amp;ndash; Core the Economy
-
-&lt;br&gt;
-
-- In this model, there must be involuntary unemployment
-
-- Suppose there is no involuntary unemployment
-
-- Workers will not exert any effort
-
-- Employers will not make any payment to workers who don't work
-
-
-
----
-
-.pull-left[
-### Position of workers' best response curve
-
-The position of the best response curve depends on 
-
-- the utility from consumption enabled by the wage income
-
-- disutility of effort
-
-- the probability of being caught while slacking
-
-- the duration of potential unemployment
-
-- the reservation wage
-
- - depends on the level of unemployment
- 
-- Higher unemployment rate
- - lower unemployment benefits
- 
- - longer duration of unemployment
-
-]
-
---
-.pull-right[
-
-&lt;br&gt;
-
-&lt;br&gt;
-
-&lt;br&gt;
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide8.JPG" width="100%"/&gt;
-&lt;/center&gt;
-
-As the duration of unemployment increases, the best response curve shifts to the left.
-]
-
----
-### Relevance of the previous section
-
-&lt;br&gt;
-
-&lt;br&gt;
-
-- Previous section was a firm level analysis.
+- Previous lecture was a firm level analysis.
 
 - We assumed unemployment rate is given in our analyis.
 
@@ -419,7 +57,7 @@ name: price_setting
 
 - Relevant for firms selling differentiated products or firms with market power
 
-&gt; **Market power:** "An attribute of a firm that can sell its product at a range of feasible prices, so that it can benefit by acting as a price-setter (rather than a price-taker)." &amp;ndash; Core the Economy
+&gt; Market power: "An attribute of a firm that can sell its product at a range of feasible prices, so that it can benefit by acting as a price-setter (rather than a price-taker)." &amp;ndash; Core the Economy
 
 
  
@@ -431,11 +69,11 @@ name: price_setting
  
 - Analyze pricing and production decisions in 4 steps
 
- 1. Represent the cost structure of the firm as a cost function
+ 1. Represent cost structure as cost function
  
  2. Using the cost function, draw isoprofit curves
  
- 3. Repersent the market demand as a demand function
+ 3. Repersent market demand as a demand function
  
  4. Using the isoprofit curves and the market demand, find the profit maximizing price and output combination
 
@@ -484,7 +122,7 @@ Potential causes:
 
 - Additional layers of bureaucracy
 
-- Increasing cost of monitoring employees
+- Increasing cost of monitor employees
 
 - Necessity of establishing other departments
 
@@ -492,77 +130,10 @@ Potential causes:
 
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/new_yorker2.jpg" width="120%"/&gt;
+&lt;img src="./lecture3_files/figure-html/new_yorker2.jpg" width="120%"/&gt;
 &lt;/center&gt;
 Source: New Yorker
 
-]
-
----
-### Total cost of production and average cost of production
-
-.pull-left[
-- Total cost of production, `\(C(Q)\)`:
-
- - total cost of producing `\(Q\)` amount of output
-
-- Average cost of production = `\(C(Q)/Q\)`
-
-]
-
-.pull-right[
-
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/figure-07-06-a.jpg" width="90%"/&gt;
-&lt;/center&gt;
-]
-
----
-
-### Total cost of production and average cost of production
-
-.pull-left[
-- Total cost of production, `\(C(Q)\)`:
-
- - total cost of producing `\(Q\)` amount of output
-
-- Average cost of production = `\(C(Q)/Q\)`
-
-- `\(F:\)` fixed cost of production
-
-]
-
-.pull-right[
-
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/figure-07-06-b.jpg" width="90%"/&gt;
-&lt;/center&gt;
-]
-
----
-
-### Total cost of production and average cost of production
-
-.pull-left[
-
-- Total cost of production, `\(C(Q)\)`:
-
- - total cost of producing `\(Q\)` amount of output
-
-- Average cost of production = `\(C(Q)/Q\)`
-
-- `\(F:\)` fixed cost of production
-
- - Leads to increasing returns to scale
- 
- - Average cost of production is decreasing when `\(Q\)` is low (when `\(Q&lt;40\)` in our example graph).
-]
-
-.pull-right[
-
-&lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/figure-07-06-e.jpg" width="90%"/&gt;
-&lt;/center&gt;
 ]
 
 
@@ -588,7 +159,7 @@ Source: New Yorker
 .pull-right[
 
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/figure-07-06-g.jpg" width="90%"/&gt;
+&lt;img src="./lecture3_files/figure-html/figure-07-06-g.jpg" width="90%"/&gt;
 &lt;/center&gt;
 ]
 
@@ -613,7 +184,7 @@ Source: New Yorker
 
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide8_7.JPG" width="100%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide8_7.JPG" width="100%"/&gt;
 &lt;/center&gt;
 ]
 ---
@@ -633,7 +204,7 @@ $$
 ]
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide25.JPG" width="100%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide25.JPG" width="100%"/&gt;
 &lt;/center&gt;
 ]
 
@@ -658,7 +229,7 @@ $$
 
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide24.JPG" width="100%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide24.JPG" width="100%"/&gt;
 &lt;/center&gt;
 
 ]
@@ -678,7 +249,7 @@ $$
 
  - Slope = MRS
  
- - MRS: Marginal rate of substitution in profit creation between selling more and charging more
+ - MRS: Marginal rate of substitution in profit creation between selling more and chargin more
 
 - Firm maximizes profits by choosing point where
 
@@ -689,7 +260,7 @@ $$
 ]
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide26.JPG" width="120%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide26.JPG" width="120%"/&gt;
 &lt;/center&gt;
 ]
 ---
@@ -716,7 +287,7 @@ $$
 ]
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide26.JPG" width="120%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide26.JPG" width="120%"/&gt;
 &lt;/center&gt;
 ]
 
@@ -742,7 +313,7 @@ $$
 ]
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide27.JPG" width="100%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide27.JPG" width="100%"/&gt;
 &lt;/center&gt;
 ]
 
@@ -760,7 +331,7 @@ $$
 ]
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide29.JPG" width="100%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide29.JPG" width="100%"/&gt;
 &lt;/center&gt;
 ]
 
@@ -781,7 +352,7 @@ $$ \epsilon = -\frac{\Delta Q}{\Delta P} \frac{P}{Q}$$
 ]
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide18.JPG" width="100%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide18.JPG" width="100%"/&gt;
 &lt;/center&gt;
 ]
 ---
@@ -793,12 +364,12 @@ $$ \epsilon = -\frac{\Delta Q}{\Delta P} \frac{P}{Q}$$
 
 .pull-left[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide19.JPG" width="100%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide19.JPG" width="100%"/&gt;
 &lt;/center&gt;
 ]
 .pull-right[
 &lt;center&gt;
-&lt;img src="./lecture2_files/figure-html/Slide20.JPG" width="100%"/&gt;
+&lt;img src="./lecture3_files/figure-html/Slide20.JPG" width="100%"/&gt;
 &lt;/center&gt;
 ]
 
